fixed wrong font path

--- a/src/assets/belair-light-font.css
+++ b/src/assets/belair-light-font.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family:"Belair Light";
-    src: url("./assets/fonts/Belair Light.ttf");
+    src: url("./fonts/Belair Light.ttf");
 }
 
 .belair-font {
